comet/ingressroute-comet.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comet.${dns_domain}
  namespace: comet
spec:
  routes:
    # Base URL, but catch bad paths in the regex
    - match: Host(`comet.${dns_domain}`)
      kind: Rule
      services:
        - name: comet
          kind: Service
          port: 8000
      middlewares:
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-comet-requires-configuration
    # This is a scrape / search, subject to rate-limiting
    - match: Host(`comet.${dns_domain}`) && PathPrefix(`/{something:.+}/stream/{else:.+}`)
      kind: Rule
      services:
        - name: comet
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-stream
    # Advise user of RD deprecation (match base64 value of "realdebrid")
    - match: Host(`comet.${dns_domain}`) && PathPrefix(`/{something:.+}cmVhbGRlYn{else:.+}`)
      kind: Rule
      services:
        - name: comet
          kind: Service
          port: 8000
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-realdebrid-api-removal
          namespace: traefik
    # # And likewise for AD
    - match: Host(`comet.${dns_domain}`) && PathPrefix(`/{something:.+}ImRlYnJpZFNlcnZpY2UiOiJhbGxkZWJyaWQ{else:.+}`)
      kind: Rule
      services:
        - name: comet
          kind: Service
          port: 8000
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-realdebrid-api-removal
          namespace: traefik         
    # # And likewise for DL
    # - match: Host(`comet.${dns_domain}`) && PathPrefix(`/{something:.+}ImRlYnJpZFNlcnZpY2{else:.+}`)
    #   kind: Rule
    #   services:
    #     - name: comet
    #       kind: Service
    #       port: 8000
    #   middlewares:  
    #     - name: headers-add-cors-for-stremio
    #       namespace: traefik
    #     - name: redirectregex-realdebrid-api-removal
    #       namespace: traefik
